--- a/angular-tablas/src/app/components/tabla/tabla.component.html
+++ b/angular-tablas/src/app/components/tabla/tabla.component.html
@@ -1,3 +1,31 @@
+<div class="checkbox-container">
+    <mat-checkbox (change)="setAll($event.checked)">Mostrar/Ocultar todas las columnas</mat-checkbox>
+    <span class="m-2">
+        <mat-checkbox (change)="eventCheck($event.checked, 'numAlum')"
+            [checked]="displayedColumns.includes('numAlum')">Id</mat-checkbox>
+    </span>
+    <span class="m-2">
+        <mat-checkbox (change)="eventCheck($event.checked, 'name')"
+            [checked]="displayedColumns.includes('name')">Nombre</mat-checkbox>
+    </span>
+    <span class="m-2">
+        <mat-checkbox (change)="eventCheck($event.checked, 'apellidos')"
+            [checked]="displayedColumns.includes('apellidos')">Apellidos</mat-checkbox>
+    </span>
+    <span class="m-2">
+        <mat-checkbox (change)="eventCheck($event.checked, 'nif')"
+            [checked]="displayedColumns.includes('nif')">NIF</mat-checkbox>
+    </span>
+    <span class="m-2">
+        <mat-checkbox (change)="eventCheck($event.checked, 'edad')"
+            [checked]="displayedColumns.includes('edad')">Edad</mat-checkbox>
+    </span>
+    <span class="m-2">
+        <mat-checkbox (change)="eventCheck($event.checked, 'curso')"
+            [checked]="displayedColumns.includes('curso')">Curso</mat-checkbox>
+    </span>
+</div>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!-- NumAlum Column -->
@@ -8,7 +36,7 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
