--- a/angular-barra-de-progreso/src/app/app.component.html
+++ b/angular-barra-de-progreso/src/app/app.component.html
@@ -3,4 +3,4 @@
     <input type="range" id="progressValue" min="0" max="100" [(ngModel)]="value">
 </div>
 
-<app-barra-progreso></app-barra-progreso>
+<app-barra-progreso [value]="value"></app-barra-progreso>
