--- a/angular-barra-de-progreso/src/app/components/barra-progreso/barra-progreso.component.html
+++ b/angular-barra-de-progreso/src/app/components/barra-progreso/barra-progreso.component.html
@@ -1,7 +1,9 @@
-<ngb-progressbar [type]="getProgressBarType(value)" [value]="value" [striped]="false" [animated]="false" aria-valuemin="0"
+<ngb-progressbar [type]="getProgressColor(value)" [value]="value" [striped]="false" [animated]="false" aria-valuemin="0"
         aria-valuemax="100">
+        <strong>{{value}}%</strong>
 </ngb-progressbar>
 
-<ngb-progressbar class="mt-3" [type]="getProgressBarType(value)" [value]="value" [striped]="true" [animated]="false" aria-valuemin="0"
-        aria-valuemax="100">
+<ngb-progressbar class="mt-3" [type]="getProgressColor(value)" [value]="value" [striped]="true" [animated]="false"
+        aria-valuemin="0" aria-valuemax="100">
+        <strong>{{value}}%</strong>
 </ngb-progressbar>
