--- a/ud2-06-star-wars/src/app/components/vehicles/vehicles.component.html
+++ b/ud2-06-star-wars/src/app/components/vehicles/vehicles.component.html
@@ -7,6 +7,7 @@
                 <h4 class="h6">{{ item.model }}</h4>
             </div>
             <div class="card-body">
+                <img [src]="generateVehiclePhoto(item.url)" alt="">
                 <p><strong>Manufacturer:</strong> {{ item.manufacturer }}</p>
                 <p><strong>Vehicle Class:</strong> {{ item.vehicle_class }}</p>
                 <p><strong>Cargo Capacity:</strong> {{ item.cargo_capacity }}</p>
