--- a/pokemon-battle-michy/src/app/components/pokemon/pokemon.component.html
+++ b/pokemon-battle-michy/src/app/components/pokemon/pokemon.component.html
@@ -1,25 +1,33 @@
-<ng-lottie [options]="options"/>
-
-<div class="card" style="width: 18rem;">
-
-    <img class="card-img-top" [src]="pokemon?.sprites?.front_default" [alt]="pokemon?.name">
-
-    <div class="card-body">
-
-        <h5 class="card-title">{{pokemon?.name}}</h5>
-
-        <p class="card-text"><strong>{{pokemon?.height}}</strong></p><br>
-        <p class="card-text"><strong>{{pokemon?.weight}}</strong></p><br>
-
-        <ngb-progressbar class="mb-3" [type]="getProgressBarColor()" [value]="life" [striped]="true"
-            [animated]="true"><i>{{life}}</i></ngb-progressbar>
-
-        @if(isMyTurn == true){
-        <button (click)="doAttack()" href="#" class="btn btn-primary">Attack</button>
-    } @else {
-        <button >Wating Attack</button>
+<div class="card" style="width: 18rem">
+    @if(showAnimation) {
+    <ng-lottie [options]="options"></ng-lottie>
+    <audio autoplay>
+        <source src="/assets/medium_explosion.mp3" type="audio/mpeg" />
+    </audio>
+    } @else{
+    <img [src]="pokemon?.sprites?.front_default" class="card-img-top" [alt]="pokemon?.name" />
     }
-
+    <div class="card-body">
+        <h5 class="card-title">{{ pokemon?.name }}</h5>
+        <p class="card-text">
+            <ngb-progressbar class="mb-3" [type]="getProgressBarColor()" [value]="life" [striped]="true"
+                [animated]="true"><i>{{ life }}%</i></ngb-progressbar>
+        </p>
+        @if(isMyTurn == true && life > 0 && !batallaTerminada) {
+        <button (click)="doAttack()" class="btn btn-primary">Attack</button>
+        <br />
+        <button (click)="curar()" class="btn btn-success mt-3" [disabled]="life === 100">Curar</button>
+        <br />
+        <small><em *ngIf="life === 100">Tienes la vida completa, no puedes curarte</em><em *ngIf="life !== 100">Curas
+                restantes: {{curasQuedan}}</em></small>
+        } @else if (isMyTurn != true && life > 0){
+        <button disabled="disabled" class="btn btn-primary">
+            Waiting attack..
+        </button>
+        } @else if (isMyTurn != true && life <= 0) { <button disabled="disabled" class="btn btn-primary"
+            [attr.disabled]="batallaTerminada ? true : null">
+            Batalla terminada
+            </button>
+            }
     </div>
-
 </div>
