--- a/pokemon-battle-michy/src/app/pages/battle/battle.component.html
+++ b/pokemon-battle-michy/src/app/pages/battle/battle.component.html
@@ -1,10 +1,39 @@
-<div class="container fluid">
-    <div class="row">
-        <div class="col-md-4 col-12">
-            <app-pokemon [pokemonId]="pokemonPlayer1Id" [life]="lifePokemon1" [isMyTurn]="pokemonTurn == 1" (onAttackDone)="applyDamage($event)"></app-pokemon>
+<style>
+    .pokemon-column {
+        margin-left: -190px;
+        /* Ajusta el valor según lo necesites */
+        margin-right: -220px;
+    }
+</style>
+
+<div class="input-section text-center mb-4">
+    <label for="pokemonPlayer1Id">Pokemon Player 1 ID:</label>
+    <input type="number" id="pokemonPlayer1Id" [(ngModel)]="pokemonPlayer1Id"
+        class="form-control d-inline-block w-auto mx-2">
+
+    <label for="pokemonPlayer2Id">Pokemon Player 2 ID:</label>
+    <input type="number" id="pokemonPlayer2Id" [(ngModel)]="pokemonPlayer2Id"
+        class="form-control d-inline-block w-auto mx-2">
+
+    <button (click)="updatePokemonIds()" class="btn btn-primary mt-2">Update</button>
+</div>
+
+<div class="container-fluid d-flex align-items-center" style="height: 100vh;">
+    <div class="row w-100 justify-content-center">
+        <div class="col-md-4 col-12 d-flex justify-content-center align-self-center pokemon-column">
+            <app-pokemon [pokemonId]="pokemonPlayer1Id" [life]="lifePokemon1" [isMyTurn]="pokemonTurn == 1"
+                (onAttackDone)="applyDamage($event)" (onHealDone)="healPokemon($event)"></app-pokemon>
         </div>
-        <div class="col-md-4 col-12">
-            <app-pokemon [pokemonId]="pokemonPlayer2Id" [life]="lifePokemon2" [isMyTurn]="pokemonTurn == 2" (onAttackDone)="applyDamage($event)"></app-pokemon>
+        <div class="col-md-4 col-12 text-center align-self-center">
+            <h2>VS</h2>
+        </div>
+        <div class="col-md-4 col-12 d-flex justify-content-center align-self-center pokemon-column">
+            <app-pokemon [pokemonId]="pokemonPlayer2Id" [life]="lifePokemon2" [isMyTurn]="pokemonTurn == 2"
+                (onAttackDone)="applyDamage($event)" (onHealDone)="healPokemon($event)"></app-pokemon>
         </div>
     </div>
+</div>
+
+<div class="text-center mt-4">
+    <button (click)="resetBattle()" class="btn btn-danger">Reset Battle</button>
 </div>
